фикс маппинга
